<resources>
    <string name="app_name">小易</string>
    <string name="action_settings">配置</string>

    <string name="title_activity_test_page">测试页面</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="Star">*</string>
    <string name="Clear">清除(C)</string>
    <string name="Back">回退(B)</string>
    <string name="Call">呼叫(#)</string>
    <string name="show_tests">测试页面</string>
    <string name="input_room_number">输入住户编号</string>
    <string name="calling">拨号中....</string>
</resources>
