<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerVertical="true"
    android:layout_centerHorizontal="true"
    tools:context=".MiniE">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="New Text"
            android:id="@+id/textView2"
            android:layout_row="0"
            android:layout_column="0" />


        <TextClock
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textAlignment="center"
            android:id="@+id/textClock"
            android:layout_row="0"
            android:layout_column="2" />

    </GridLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <AnalogClock
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/analogClock"
                android:layout_row="0"
                android:layout_column="0" />
        </GridLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <!-- 这里第一行显示标签为一个水平布局 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                <TextView
                    style="@style/MyDialTextViewTheme"
                    android:id="@+id/dialInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:hint="@string/input_room_number">
                </TextView>
            </LinearLayout>


            <!-- 最外层是一个水平布局，由左边上面一行1 2 3三个Button,下面一行的0 . 两个Button 和 右边的=构成 -->
            <LinearLayout android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <!-- 这里 1 2 3 和 下面的 0 . 构成一个垂直布局 -->
                <LinearLayout android:orientation="vertical"
                    android:layout_weight="3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >
                        <Button
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/_7"
                            android:tag="7"
                            android:onClick="onDialInput"
                            android:layout_weight="1">
                        </Button>
                        <Button
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/_8"
                            android:tag="8"
                            android:onClick="onDialInput"
                            android:layout_weight="1">
                        </Button>
                        <Button
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/_9"
                            android:tag="9"
                            android:onClick="onDialInput"
                            android:layout_weight="1">
                        </Button>

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >
                        <Button
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:tag="4"
                            android:text="@string/_4"
                            android:onClick="onDialInput" >
                        </Button>
                        <Button
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:tag="5"
                            android:text="@string/_5"
                            android:onClick="onDialInput" >
                        </Button>
                        <Button
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:tag="6"
                            android:text="@string/_6"
                            android:onClick="onDialInput" >
                        </Button>

                    </LinearLayout>

                    <!--  这里的 1 2 3 构成一个水平布局 -->
                    <LinearLayout android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:tag="1"
                            android:text="@string/_1"
                            android:onClick="onDialInput" >
                        </Button>
                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:tag = "2"
                            android:text="@string/_2"
                            android:onClick="onDialInput" >
                        </Button>
                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:tag = "3"
                            android:text="@string/_3"
                            android:onClick="onDialInput">
                        </Button>
                    </LinearLayout>
                    <!--  这里的 0 和 . 构成一个水平布局，注意这里的android_weight参数设置 -->
                    <LinearLayout android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <Button
                            android:layout_width="0px"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:tag = "0"
                            android:text="@string/_0"
                            android:onClick="onDialInput">
                        </Button>
                        <Button
                            android:layout_width="0px"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:tag = "star"
                            android:text="@string/Star"
                            android:onClick="onDialInput">
                        </Button>
                    </LinearLayout>
                </LinearLayout>
                <!-- 这里一个单独Button构成的垂直布局 -->
                <LinearLayout android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:tag = "clear"
                        android:text="@string/Clear"
                        android:onClick="onDialInput">
                    </Button>
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:tag = "back"
                        android:text="@string/Back"
                        android:onClick="onDialInput" >
                    </Button>
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:tag = "call"
                        android:text="@string/Call"
                        android:onClick="onDialInput">
                    </Button>
                </LinearLayout>
            </LinearLayout>

            <ListView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/personList" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnTests"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/show_tests"
                android:onClick="showTests"
                android:layout_row="0"
                android:layout_column="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Large Text"
                android:id="@+id/textView3"
                android:layout_row="0"
                android:layout_column="24" />
        </GridLayout>
    </LinearLayout>

</LinearLayout>
